<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mydairy.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_customer"
        android:name="com.example.mydairy.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_customers" />

    <fragment
        android:id="@+id/nav_rate"
        android:name="com.example.mydairy.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_rate" />

    <fragment
        android:id="@+id/nav_mothlyreport"
        android:name="com.example.mydairy.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_monthlyreport" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.mydairy.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.mydairy.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_logout" />
</navigation>